devise周りの作成

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,29 @@
   </head>
 
   <body>
+    <header>
+      <div>
+        <h1>
+          <%= link_to posts_path do %>
+            PokerHack
+          <% end %>
+        </h1>
+      </div>
+      <div>
+        <% if user_signed_in? %>
+          <%= link_to destroy_user_session_path, method: :delete do %>
+            Log out
+          <% end %>
+        <% else %>
+          <%= link_to new_user_session_path do %>
+            Log in
+          <% end %>
+          <%= link_to  new_user_registration_path do %>
+            Sign up
+          <% end %>
+        <% end %>
+      </div>
+    </header>
     <%= yield %>
   </body>
 </html>
