--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,3 @@
-<div>aaa
-aaa
-aaa</div>
 <div>
   <%= @post.body %>
   <div>
@@ -19,17 +16,16 @@ aaa</div>
     <% end %>
     <%= Dislike.where(post_id: @post.id).count %>
   </div>
-</div>
+  <div>
+    <% if user_signed_in? %>
+      <%= link_to post_favorites_path(@post) do %>
+        ★お気に入り登録
+      <% end %>
+    <% end %>
 
-<div>
-  <%= form_with model: @comment ,local: true do |f| %>
-    <%= f.hidden_field :post_id, value: @post.id %>
-    <% f.label :body %>
-    <%= f.text_area :body %>
-    <%= f.submit %>
-  <% end %>
+  </div>
 </div>
-
+<div>_______________________________________________________</div>
 <div>
   <% if @comments %>
     <% @comments.each do |comment| %>
@@ -51,5 +47,14 @@ aaa</div>
         <%= CommentDislike.where(comment_id: comment.id).count %>
       </div>
     <% end %>
+  <% end %>
+</div>
+
+<div>
+  <%= form_with model: @comment ,local: true do |f| %>
+    <%= f.hidden_field :post_id, value: @post.id %>
+    <% f.label :body %>
+    <%= f.text_area :body %>
+    <%= f.submit %>
   <% end %>
 </div>
