--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -18,9 +18,17 @@
   </div>
   <div>
     <% if user_signed_in? %>
-      <%= link_to post_favorites_path(@post) do %>
-        ★お気に入り登録
+
+      <% if Favorite.find_by(post_id: @post.id, user_id: current_user.id) %>
+        <%= link_to post_favorites_path(@post),method: :delete do %>
+          ★お気に入り登録解除
+        <% end %>
+      <% else %>
+        <%= link_to post_favorites_path(@post),method: :post do %>
+          ★お気に入り登録
+        <% end %>
       <% end %>
+
     <% end %>
 
   </div>
