--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -29,5 +29,6 @@
         <%= Dislike.where(post_id: post.id).count %> 
       </div>
     <% end %>
+    <%= paginate @posts %>
   <% end %>
 </div>
