--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -32,22 +32,15 @@
                 <%= image_tag(image, width:150) %>
               <% end %>
             </div>
-            <div>
-              <% if Like.find_by(post_id: post.id, ip: request.remote_ip) %>
-                <%= link_to '👍', post_likes_path(post), method: :delete %>
-              <% else %>
-                <%= link_to '👍', post_likes_path(post), method: :post %>
-              <% end %>
-              <%= Like.where(post_id: post.id).count %>
-
-              <% if Dislike.find_by(post_id: post.id, ip: request.remote_ip) %>
-                <%= link_to '👎', post_dislikes_path(post), method: :delete %>
-              <% else %>
-                <%= link_to '👎', post_dislikes_path(post), method: :post %>
-              <% end %>
-              <%= Dislike.where(post_id: post.id).count %>
-            </div>
           <% end %>
+            <div>
+              <span id="post_<%= post.id %>">
+                <%= render'likes/like-btn',post: post %>
+              </span>
+              <span id="post_dislike_<%= post.id %>">
+                <%= render'dislikes/dislike-btn',post: post %>
+              </span>  
+            </div>
           <div>
             コメント数：<%= post.comments.count %>
           </div>
