--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -46,18 +46,12 @@
           <% end %>
         </div>
         <div>
-          <% if CommentLike.find_by(comment_id: comment.id, ip: request.remote_ip) %>
-            <%= link_to '👍',  comment_comment_likes_path(comment), method: :delete %>
-          <% else %>
-            <%= link_to '👍',  comment_comment_likes_path(comment), method: :post %>
-          <% end %>
-          <%= CommentLike.where(comment_id: comment.id).count %>
-          <% if CommentDislike.find_by(comment_id: comment.id, ip: request.remote_ip) %>
-            <%= link_to '👎', comment_comment_dislikes_path(comment), method: :delete %>
-          <% else %>
-            <%= link_to '👎', comment_comment_dislikes_path(comment), method: :post %>
-          <% end %>
-          <%= CommentDislike.where(comment_id: comment.id).count %>
+          <span id="comment_<%= comment.id %>">
+            <%= render'comment_likes/comment_like-btn',comment: comment %>
+          </span>
+          <span id="comment_dislike_<%= comment.id %>">
+            <%= render'comment_dislikes/comment_dislike-btn',comment: comment %>
+          </span>
         </div>
       <% end %>
     <% end %>
