--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,10 @@
             </h1>
           </div>
           <div class="col-4">
+            <%= form_with url: search_path, method: :get, local: true do |f| %>
+              <%= f.text_field :body %>
+              <%= f.submit '検索' %>
+            <% end %>
             <% if user_signed_in? %>
             <div class="header-link">
               <%= link_to destroy_user_session_path class:"header-link-right", method: :delete do %>
