--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,10 @@
  *= require_tree .
  *= require_self
  */
+ header{
+     color: #afeeee;
+ }
+
 a:link, a:visited, a:hover, a:active {
   color: black;
 }
