--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,2 +1,20 @@
 @import '~bootstrap/scss/bootstrap';
 @import '~@fortawesome/fontawesome-free/scss/fontawesome';
+
+ header{
+     color: #afeeee;
+ }
+
+a:link, a:visited, a:hover, a:active {
+  color: black;
+}
+
+
+.header-link a {
+    color: white;
+}
+
+.header-link-right{
+    display: grid;
+    align-items: center;
+}
