--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -51,6 +51,7 @@
               </div>
               <div>
                 コメント数：<%= post.comments.count %>
+                <%= post.created_at.strftime('%Y/%m/%d') %>
               </div>
             </div>
           </div>
