--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,2 +1,5 @@
-<h1>Homes#about</h1>
-<p>Find me in app/views/homes/about.html.erb</p>
+<div class="top-wrapper">
+  <h1>Poker Hack</h1>
+  
+  <p>Poker Hackはテキサスホールデムポーカーの<br>戦術をログインを介さずに自由に議論できる場所です。</p>
+</div>
