--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -1,3 +1,19 @@
 // Place all the styles related to the homes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+.top-wrapper{
+  width: 100%;
+  height: 700px;
+  background-image: image-url("poker-1564042_1920.jpg");
+}
+
+.top-wrapper h1{
+  line-height: 2;
+  color: rgba(255, 255, 255, 0.5);
+}
+
+.top-wrapper p{
+  line-height: 2;
+  color: rgba(255, 255, 255, 0.5);
+}
