--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,5 +1,7 @@
 <div class="top-wrapper">
-  <h1>Poker Hack</h1>
+  <div class="contents">
+    <h1>Poker Hack</h1>
   
-  <p>Poker Hackはテキサスホールデムポーカーの<br>戦術をログインを介さずに自由に議論できる場所です。</p>
+    <p>Poker Hackはテキサスホールデムポーカーの<br>戦術をログインを介さずに自由に議論できる場所です。</p>
+  </div>
 </div>
