--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -3,17 +3,23 @@
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
 .top-wrapper{
+  position: relative;
   width: 100%;
   height: 700px;
   background-image: image-url("poker-1564042_1920.jpg");
 }
-
-.top-wrapper h1{
-  line-height: 2;
-  color: rgba(255, 255, 255, 0.5);
+.contents{
+  position: absolute;
+  bottom: 100px;
+  left: 50px;
 }
 
-.top-wrapper p{
+.contents h1{
   line-height: 2;
-  color: rgba(255, 255, 255, 0.5);
+  color: rgba(255, 255, 255, 0.8);
+}
+
+.contents p{
+  line-height: 2;
+  color: rgba(255, 255, 255, 0.8);
 }
