--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-    <header class="bg-info text-white">
+    <header class="text-white">
       <div class="container">
         <div class="row">
           <div class="col-8">
@@ -50,6 +50,13 @@
         </div>
       </div>
     </header>
-    <%= yield %>
+  <%= yield %>
   </body>
+  <footer>
+    <div class="footer-contents">
+      <%= link_to about_path do %>
+        about
+      <% end %>
+    </div>
+  </footer>
 </html>
