--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,22 @@
  */
 
 
+.post-container{
+
+  width: 90%;
+  margin: 0 auto;
+　text-align: center;
+
+}
+
+.devise-container{
+  padding-top:100px;
+  position: absolute;
+  top: 25%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
  header{
     background-color: #333333;
     opacity: 0.9;
