--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -31,3 +31,18 @@ a:link, a:visited, a:hover, a:active {
     display: grid;
     align-items: center;
 }
+
+footer{
+
+  width: 90%;
+  margin: 0 auto;
+  padding-bottom: 50px;
+
+  color: white;
+
+
+}
+
+.footer-contents{
+    color: white;
+}
