--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -15,7 +15,7 @@
 
           <%= f.file_field :images, multiple: true %>
         </div>
-        <%= f.submit class:"btn btn-primary mb-2" %>
+        <%= f.submit "投稿する", class:"btn btn-primary mb-2" %>
       <% end %>
     </div>
   </div>
