--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -5,62 +5,88 @@
 <div class="post-container">
   <div class="row">
     <div class="col-12">
-      <div>
-        <%= safe_join(@post.body.split("\n"),tag(:br))  %>
-        <div>
-          <span id="post_<%= @post.id %>">
-            <%= render'likes/like-btn',post: @post %>
-          </span>
-          <span id="post_dislike_<%= @post.id %>">
-            <%= render'dislikes/dislike-btn',post: @post %>
-          </span>
-        </div>
-        <div>
-          <% @post.images.each do |image| %>
-          <div>
-            <%= image_tag(image, width:400) %>
-          </div>
-          <% end %>
-        </div>
-        <div>
-          <% if user_signed_in? %>
+      <div class="card">
+        <div class="card-body">
+          <%= safe_join(@post.body.split("\n"),tag(:br))  %>
 
-            <% if Favorite.find_by(post_id: @post.id, user_id: current_user.id) %>
-              <%= link_to post_favorites_path(@post),method: :delete do %>
-                ★お気に入り登録解除
+          <div>
+            <% @post.images.each do |image| %>
+            <div>
+              <%= image_tag(image, width:400) %>
+            </div>
+            <% end %>
+          </div>
+
+
+
+        </div>
+        <div class="card-footer">
+          <div>
+            <% if user_signed_in? %>
+
+              <% if Favorite.find_by(post_id: @post.id, user_id: current_user.id) %>
+                <%= link_to post_favorites_path(@post),method: :delete ,class:"btn btn-primary mb-2" do %>
+                  お気に入り登録解除
+                <% end %>
+              <% else %>
+                <%= link_to post_favorites_path(@post),method: :post,class:"btn btn-primary mb-2" do %>
+                  お気に入り登録
+                <% end %>
               <% end %>
-            <% else %>
-              <%= link_to post_favorites_path(@post),method: :post do %>
-                ★お気に入り登録
+
+            <% end %>
+            <% if user_signed_in? && current_user.name == "admin" %>
+              <%= link_to post_path(@post),method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger mb-2 " do %>
+                投稿を削除する
               <% end %>
             <% end %>
-          <% end %>
+          </div>
+          <div>
+            <span id="post_<%= @post.id %>">
+              <%= render'likes/like-btn',post: @post %>
+            </span>
+            <span id="post_dislike_<%= @post.id %>">
+              <%= render'dislikes/dislike-btn',post: @post %>
+            </span>
+          </div>
+          <div>
+            コメント数：<%= @post.comments.count %>/
+            投稿日:<%= @post.created_at.strftime('%Y年%m月%d日') %>/
+            最終更新:<%= distance_of_time_in_words(@post.updated_at, Time.now) %>前
+          </div>
         </div>
       </div>
-      <div>_______________________________________________________</div>
     </div>
   </div>
   <div>
+    <br>
+    <h4>コメント</h4>
     <% if @comments %>
       <% @comments.each do |comment| %>
-        <%= safe_join(comment.body.split("\n"),tag(:br))  %>
-        <div>
-          <% comment.images.each do |image| %>
-            <%= image_tag(image, width:350) %>
-          <% end %>
+      <div class="card">
+        <div class="card-body">
+          <%= safe_join(comment.body.split("\n"),tag(:br))  %>
+          <div>
+            <% comment.images.each do |image| %>
+              <%= image_tag(image, width:350) %>
+            <% end %>
+          </div>
         </div>
-        <div>
-          <span id="comment_<%= comment.id %>">
-            <%= render'comment_likes/comment_like-btn',comment: comment %>
-          </span>
-          <span id="comment_dislike_<%= comment.id %>">
-            <%= render'comment_dislikes/comment_dislike-btn',comment: comment %>
-          </span>
+        <div class="card-footer">
+          <div>
+            <span id="comment_<%= comment.id %>">
+              <%= render'comment_likes/comment_like-btn',comment: comment %>
+            </span>
+            <span id="comment_dislike_<%= comment.id %>">
+              <%= render'comment_dislikes/comment_dislike-btn',comment: comment %>
+            </span>
+          </div>
         </div>
+      </div>
       <% end %>
     <% end %>
   </div>
-
+  <br>
   <div class="row">
     <%= form_with model: @comment ,local: true do |f| %>
       <%= f.hidden_field :post_id, value: @post.id %>
@@ -71,7 +97,7 @@
         <!-- ctrl,commandを押下しながらで複数選択。スマホでどうなるか要検証 -->
         <%= f.file_field :images, multiple: true %>
       </div>
-      <%= f.submit %>
+      <%= f.submit "投稿する", class:"btn btn-primary mb-2" %>
     <% end %>
   </div>
 </div>
