--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -15,6 +15,11 @@
 
           <%= f.file_field :images, multiple: true %>
         </div>
+        <div>
+          <%= f.label :youtube_url, 'YouTubeのURL' %>
+
+          <%= f.text_field :youtube_url %>
+        </div>
         <%= f.submit "投稿する", class:"btn btn-primary mb-2" %>
       <% end %>
     </div>
@@ -40,6 +45,11 @@
                 <div>
                   <% post.images.each do |image| %>
                     <%= image_tag(image, width:150) %>
+                  <% end %>
+                </div>
+                <div>
+                  <% if post.youtube_url %>
+                    <iframe class="video" src="https://www.youtube.com/embed/<%= post.youtube_url %>" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                   <% end %>
                 </div>
               </p>
